<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.RegisterActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_back"/>

    <TextView
        android:id="@+id/subcreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitle_register"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccount"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvName"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subcreateAccount"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtName"
        style="@style/TextInputLayout"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName">

        <com.capstone.c22018.buangin.customview.NameEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvEmail"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtEmail"
        style="@style/TextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail">

        <com.capstone.c22018.buangin.customview.EmailEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPassword"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlEmail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtPassword"
        style="@style/TextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword">

        <com.capstone.c22018.buangin.customview.PasswordEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/TextInputEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/btnRegister"
        style="@style/ButtonGreen"
        app:layout_constraintBottom_toTopOf="@id/linear_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linear_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Sosmed">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/garis"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/garis"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Sosmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sosmed_register"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_sosmed"/>

    <LinearLayout
        android:id="@+id/linear_sosmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_login">

        <ImageView
            android:id="@+id/icon_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_google"
            android:layout_marginEnd="8dp"
            android:src="@drawable/google"/>

        <ImageView
            android:id="@+id/icon_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_fb"
            android:layout_marginEnd="8dp"
            android:src="@drawable/fb" />

        <ImageView
            android:id="@+id/icon_apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_apple"
            android:src="@drawable/apple_logo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLogin"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLogin"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>