<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/img_login"
        android:src="@drawable/image_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login" />

    <TextView
        android:id="@+id/subLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitle_login"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvEmail"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subLogin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edtEmail"
        style="@style/TextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail">

        <com.capstone.c22018.buangin.customview.EmailEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPassword"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlEmail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edtPassword"
        style="@style/TextInputLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword">

        <com.capstone.c22018.buangin.customview.PasswordEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/TextInputEditText"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/btnLogin"
        style="@style/ButtonGreen"
        app:layout_constraintBottom_toTopOf="@id/forgotPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetPass"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_Or"/>

    <LinearLayout
        android:id="@+id/linear_Or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Sosmed">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/garis"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:src="@drawable/garis"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Sosmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sosmed_login"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_sosmed"/>

    <LinearLayout
        android:id="@+id/linear_sosmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_register">

        <ImageView
            android:id="@+id/icon_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_google"
            android:layout_marginEnd="8dp"
            android:src="@drawable/google"/>

        <ImageView
            android:id="@+id/icon_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_fb"
            android:layout_marginEnd="8dp"
            android:src="@drawable/fb" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRegister"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRegister"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>